# Support-Ticket-Management-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  db.py  main.py  models.py  repositories.py  schemas.py  services.py  worker.py
app/core/: config.py  errors.py  logging.py
app/models/: __init__.py  identity.py  processing.py  tickets.py
app/services/: __init__.py  processing.py  tickets.py
migrations/: env.py
migrations/versions/: 20260722_0001_initial_schema.py  20260723_0002_add_data_integrity_constraints.py  20260723_0003_normalize_customer_and_actor_identities.py  20260723_0004_make_ticket_events_append_only.py  20260723_0005_add_worker_processing_lifecycle.py  20260723_0006_add_outbox_dead_letter_and_metrics.py  20260724_0007_add_ticket_idempotency.py
scripts/: compose_smoke_test.sh  seed.py
tests/: test_api.py  test_postgres_schema.py  test_ticket_service.py
