[project]
name = "ticketflow"
version = "1.0.0"
description = "Production-style support ticket management API"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.51.0",
  "sqlalchemy==2.0.51",
  "psycopg[binary]==3.3.4",
  "alembic==1.18.5",
  "pydantic-settings==2.14.2",
  "celery[redis]==5.6.3",
  "email-validator==2.3.0",
  "prometheus-client==0.25.0",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "pytest-asyncio==1.4.0", "httpx==0.28.1", "ruff==0.16.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["B008"] # FastAPI dependencies and query declarations are framework defaults.

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
